# evok2mqtt

./: .gitignore  README.md  evok2mqtt.py  pyproject.toml  setup.py
evok2mqtt/: __init__.py
